force-app/main/default/objects/GPT_Job__c/GPT_Job__c.object-meta.xml
<CustomObject>
    <description>A job that is submitted to ChatGPT</description>
    <label>GPT Job</label>
    <nameField>
        <displayFormat>GJ-{00000}</displayFormat>
        <label>GPT Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GPT Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>