force-app/main/default/objects/GPT_Job__c/fields/Callout_Duration__c.field-meta.xml
<CustomField>
    <fullName>Callout_Duration__c</fullName>
    <description>This is the time consumed for the API callout</description>
    <inlineHelpText>This is the time consumed for the API callout</inlineHelpText>
    <label>Callout Duration (second)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>