force-app/main/default/objects/GPT_Job__c/fields/Completion_Token__c.field-meta.xml
<CustomField>
    <fullName>Completion_Token__c</fullName>
    <description>The number of token that has been consumed in the response</description>
    <inlineHelpText>The number of token that has been consumed in the response</inlineHelpText>
    <label>Completion Token</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>