force-app/main/default/objects/GPT_Job__c/fields/Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Error_Details__c</fullName>
    <description>Details of the retry including when it was executed and the exceptions received</description>
    <inlineHelpText>Details of the retry including when it was executed and the exceptions received</inlineHelpText>
    <label>Error Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>