force-app/main/default/objects/GPT_Job__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The inspection record that the job is related to</description>
    <inlineHelpText>The inspection record that the job is related to</inlineHelpText>
    <label>Inspection</label>
    <referenceTo>Inspection__c</referenceTo>
    <relationshipLabel>GPT Jobs</relationshipLabel>
    <relationshipName>GPT_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>