force-app/main/default/objects/GPT_Job__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Indicate the type of AI model utilised for job</description>
    <inlineHelpText>Indicate the type of AI model utilised for job</inlineHelpText>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>