force-app/main/default/objects/GPT_Job__c/fields/New_Records_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Records_Owner_ID__c</fullName>
    <description>User ID of the owner of all the new records that are created</description>
    <inlineHelpText>User ID of the owner of all the new records that are created</inlineHelpText>
    <label>New Records Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>