force-app/main/default/objects/GPT_Job__c/fields/Original_Request_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Request_Record_ID__c</fullName>
    <description>Record ID of the record based on which the request is created and sent to GPT</description>
    <inlineHelpText>Record ID of the record based on which the request is created and sent to GPT</inlineHelpText>
    <label>Original Request Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>