force-app/main/default/objects/GPT_Job__c/fields/Original_Request_Record_Object__c.field-meta.xml
<CustomField>
    <fullName>Original_Request_Record_Object__c</fullName>
    <description>Object of the record based on which the request is created and sent to GPT</description>
    <inlineHelpText>Object of the record based on which the request is created and sent to GPT</inlineHelpText>
    <label>Original Request Record Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inspection</fullName>
                <label>inspection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>