force-app/main/default/objects/GPT_Job__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <description>Prompt that is sent to GPT</description>
    <inlineHelpText>Prompt that is sent to GPT</inlineHelpText>
    <label>Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>