force-app/main/default/objects/GPT_Job__c/fields/Prompt_Stored_in_File__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Stored_in_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the prompt string is stored in a file</description>
    <inlineHelpText>Indicate if the prompt string is stored in a file</inlineHelpText>
    <label>Prompt Stored in File</label>
    <type>Checkbox</type>
</CustomField>