force-app/main/default/objects/GPT_Job__c/fields/Prompt_Token__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Token__c</fullName>
    <description>The number of token that is consumed in the request</description>
    <inlineHelpText>The number of token that is consumed in the request</inlineHelpText>
    <label>Prompt Token</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>