force-app/main/default/objects/GPT_Job__c/fields/Response_Payload__c.field-meta.xml
<CustomField>
    <fullName>Response_Payload__c</fullName>
    <description>Payload of the response returned from ChatGPT</description>
    <inlineHelpText>Payload of the response returned from ChatGPT</inlineHelpText>
    <label>Response Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>