force-app/main/default/objects/GPT_Job__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of retries</description>
    <inlineHelpText>The number of retries</inlineHelpText>
    <label>Retry Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>