force-app/main/default/objects/GPT_Job__c/fields/Retry_Count_Max__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count_Max__c</fullName>
    <defaultValue>3</defaultValue>
    <description>The max number of retires allowed</description>
    <inlineHelpText>The max number of retires allowed</inlineHelpText>
    <label>Retry Count Max</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>