force-app/main/default/objects/GPT_Job__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <description>Control the diversity and creativity of the generated text</description>
    <inlineHelpText>Control the diversity and creativity of the generated text</inlineHelpText>
    <label>Temperature</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>