force-app/main/default/objects/GPT_Job__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of the request that is sent to GPT</description>
    <inlineHelpText>Type of the request that is sent to GPT</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create a template</fullName>
            </value>
            <value>
                <fullName>Create a summary</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>