force-app/main/default/objects/GPT_Job__c/listViews/Generate_Tasks_Job.listView-meta.xml
<ListView>
    <fullName>Generate_Tasks_Job</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Retry_Count__c</columns>
    <columns>Original_Request_Record_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Generate Tasks Job</label>
</ListView>